--- a/Data-out/d0.ipynb
+++ b/Data-out/d0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -388,7 +388,7 @@
        "47    20      Documents complete (ERP)  2018-09-07 11:15:29"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "Name: BRAND, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "Name: SIM, dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "Name: TARIFF, dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -591,10 +591,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1c2b85d6808>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x22b027afb48>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -618,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "[102822 rows x 3 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        "[138810 rows x 4 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
        "<function matplotlib.pyplot.show(*args, **kw)>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -931,30 +931,453 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\firat\\Anaconda3\\lib\\site-packages\\ipykernel_launcher.py:1: UserWarning: Pandas doesn't allow columns to be created via a new attribute name - see https://pandas.pydata.org/pandas-docs/stable/indexing.html#attribute-access\n",
-      "  \"\"\"Entry point for launching an IPython kernel.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "dubJoin = pd.merge(case, brands, on='pid', how='inner')\n",
-    "\n",
-    "dubJoin"
+    "d0 = pd.read_csv(r\"hda_dataset_uniform_random_0.csv\")\n",
+    "d1 = pd.read_csv(r\"hda_dataset_uniform_random_1.csv\")\n",
+    "d2 = pd.read_csv(r\"hda_dataset_uniform_random_2.csv\")\n",
+    "d3 = pd.read_csv(r\"hda_dataset_uniform_random_3.csv\")\n",
+    "d4 = pd.read_csv(r\"hda_dataset_uniform_random_4.csv\")\n",
+    "d5 = pd.read_csv(r\"hda_dataset_uniform_random_5.csv\")\n",
+    "d6 = pd.read_csv(r\"hda_dataset_uniform_random_6.csv\")\n",
+    "d7 = pd.read_csv(r\"hda_dataset_uniform_random_7.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case</th>\n",
+       "      <th>event</th>\n",
+       "      <th>ts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>7</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-09-05 23:01:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>39</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-09-03 23:01:40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>53</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-09-07 23:16:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>67</td>\n",
+       "      <td>31</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-09-07 23:16:14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>98</td>\n",
+       "      <td>45</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-09-19 23:01:16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>228203</td>\n",
+       "      <td>263141</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-12-04 22:32:30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>228239</td>\n",
+       "      <td>263175</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-12-04 23:47:07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>228253</td>\n",
+       "      <td>263189</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-12-05 23:46:42</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>228269</td>\n",
+       "      <td>263205</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-12-06 22:46:48</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>228277</td>\n",
+       "      <td>263239</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-12-03 23:46:55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91967 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          case     event                   ts\n",
+       "26           7  Invoiced  2018-09-05 23:01:14\n",
+       "39           8  Invoiced  2018-09-03 23:01:40\n",
+       "53          20  Invoiced  2018-09-07 23:16:14\n",
+       "67          31  Invoiced  2018-09-07 23:16:14\n",
+       "98          45  Invoiced  2018-09-19 23:01:16\n",
+       "...        ...       ...                  ...\n",
+       "228203  263141  Invoiced  2018-12-04 22:32:30\n",
+       "228239  263175  Invoiced  2018-12-04 23:47:07\n",
+       "228253  263189  Invoiced  2018-12-05 23:46:42\n",
+       "228269  263205  Invoiced  2018-12-06 22:46:48\n",
+       "228277  263239  Invoiced  2018-12-03 23:46:55\n",
+       "\n",
+       "[91967 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dSum = d0\n",
+    "dSum = dSum.append(d1);\n",
+    "dSum = dSum.append(d2);\n",
+    "dSum = dSum.append(d3);\n",
+    "dSum = dSum.append(d4);\n",
+    "dSum = dSum.append(d5);\n",
+    "dSum = dSum.append(d6);\n",
+    "dSum = dSum.append(d7);\n",
+    "dSum\n",
+    "\n",
+    "dSum = dSum[ (dSum.event == \"Invoiced\") | (dSum.event == \"Processing return delivery\") ]\n",
+    "\n",
+    "dSum.drop_duplicates( subset = ['case','event'], keep = \"first\", inplace = True)\n",
+    "dSum.drop_duplicates(subset =\"case\", keep = False, inplace = True)\n",
+    "dSum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pid</th>\n",
+       "      <th>BRAND</th>\n",
+       "      <th>case</th>\n",
+       "      <th>event</th>\n",
+       "      <th>ts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>66857</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>66857</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-10-08 23:01:46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>67207</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>67207</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-10-08 23:01:51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>67373</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>67373</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-10-09 22:46:46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>67551</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>67551</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-10-08 23:01:55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>68582</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>68582</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-10-08 23:02:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91962</td>\n",
+       "      <td>218377</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>218377</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-11-23 22:46:31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91963</td>\n",
+       "      <td>232950</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>232950</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-11-29 23:01:17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91964</td>\n",
+       "      <td>238258</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>238258</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-11-28 23:31:26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91965</td>\n",
+       "      <td>241084</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>241084</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-11-28 23:01:40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91966</td>\n",
+       "      <td>248306</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>248306</td>\n",
+       "      <td>Invoiced</td>\n",
+       "      <td>2018-11-29 23:01:27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91967 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          pid    BRAND    case     event                   ts\n",
+       "0       66857  BRAND_0   66857  Invoiced  2018-10-08 23:01:46\n",
+       "1       67207  BRAND_0   67207  Invoiced  2018-10-08 23:01:51\n",
+       "2       67373  BRAND_0   67373  Invoiced  2018-10-09 22:46:46\n",
+       "3       67551  BRAND_0   67551  Invoiced  2018-10-08 23:01:55\n",
+       "4       68582  BRAND_0   68582  Invoiced  2018-10-08 23:02:10\n",
+       "...       ...      ...     ...       ...                  ...\n",
+       "91962  218377  BRAND_9  218377  Invoiced  2018-11-23 22:46:31\n",
+       "91963  232950  BRAND_9  232950  Invoiced  2018-11-29 23:01:17\n",
+       "91964  238258  BRAND_9  238258  Invoiced  2018-11-28 23:31:26\n",
+       "91965  241084  BRAND_9  241084  Invoiced  2018-11-28 23:01:40\n",
+       "91966  248306  BRAND_9  248306  Invoiced  2018-11-29 23:01:27\n",
+       "\n",
+       "[91967 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dJoinBrandsAndDsum = pd.merge( brands, dSum, left_on='pid', right_on='case')\n",
+    "dJoinBrandsAndDsum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BRAND</th>\n",
+       "      <th>ts</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>2018-10-08 23:01:46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>2018-10-08 23:01:51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>2018-10-09 22:46:46</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>2018-10-08 23:01:55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>BRAND_0</td>\n",
+       "      <td>2018-10-08 23:02:10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91962</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>2018-11-23 22:46:31</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91963</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>2018-11-29 23:01:17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91964</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>2018-11-28 23:31:26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91965</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>2018-11-28 23:01:40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>91966</td>\n",
+       "      <td>BRAND_9</td>\n",
+       "      <td>2018-11-29 23:01:27</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>91967 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         BRAND                   ts\n",
+       "0      BRAND_0  2018-10-08 23:01:46\n",
+       "1      BRAND_0  2018-10-08 23:01:51\n",
+       "2      BRAND_0  2018-10-09 22:46:46\n",
+       "3      BRAND_0  2018-10-08 23:01:55\n",
+       "4      BRAND_0  2018-10-08 23:02:10\n",
+       "...        ...                  ...\n",
+       "91962  BRAND_9  2018-11-23 22:46:31\n",
+       "91963  BRAND_9  2018-11-29 23:01:17\n",
+       "91964  BRAND_9  2018-11-28 23:31:26\n",
+       "91965  BRAND_9  2018-11-28 23:01:40\n",
+       "91966  BRAND_9  2018-11-29 23:01:27\n",
+       "\n",
+       "[91967 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dJoinBrandsAndDsum = dJoinBrandsAndDsum.drop(columns=['pid', 'case', 'event'])\n",
+    "dJoinBrandsAndDsum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-20-7e980ef47097>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-20-7e980ef47097>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    #my_date = datetime.strptime(my_string, \"%Y-%m-%d\")\u001b[0m\n\u001b[1;37m                                                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "for index, row in dJoinBrandsAndDsum.ts.iterrows():\n",
+    "#my_date = datetime.strptime(my_string, \"%Y-%m-%d\")"
+   ]
   },
   {
    "cell_type": "code",
