--- a/Data-out/alleTabellen.ipynb
+++ b/Data-out/alleTabellen.ipynb
@@ -626,8 +626,8 @@
     }
    ],
    "source": [
-    "dataset0 = pd.read_csv(r\"hda_dataset_uniform_random_0.csv\")\n",
-    "dataset0"
+    "d0 = pd.read_csv(r\"hda_dataset_uniform_random_0.csv\")\n",
+    "d0"
    ]
   },
   {
